--- a/options/options.html
+++ b/options/options.html
@@ -208,7 +208,7 @@
             <span class="scFeatureName">Other enhancements<a href="https://github.com/ugo-quaisse/sitecore-author-toolbox/wiki/" class="infoLink" target="_blank" rel="noopener">Info</a></span>
           </div>
         </fieldset>
-        <legend>Quick Edit</legend>
+        <legend>Quick Edit<a class="sitesSettings" id="quickEditSettings">Configure sites ➜</a></legend>
         <fieldset>
           <!-- Right click to launch Edit URLs -->
           <div class="scFeature">
